--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         @* ---------------------------- menu -------------------------- *@
         <link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/bootstrap.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
+        @*<script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>*@
         @* ---------------------------- NumberFormat -------------------------- *@
         <script src="@Url.Content("~/Scripts/NumberFormat/jshashtable-3.0.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/NumberFormat/jquery.numberformatter-1.2.4.js")" type="text/javascript"></script>       
