--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -1109,7 +1109,7 @@ select{
         left: 65% !important;
     }
     .logonname{
-        color:white;
+        color:#5c5c5c;
         /*top: 8%;*/
         left: 77.5%;
         position: absolute;
@@ -1121,7 +1121,7 @@ select{
         left: 69.5% !important;
     }
     .loginname a{
-        color:white;
+        color:#5c5c5c;
         /*top: 2%;*/
         left: 78%;
         position: absolute;
