--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,6 +20,36 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.menulocation
+{
+    padding-top: 8%;
+    padding-left: 13%;
+}
+@media (max-width: 680px) {
+    .menulocation {
+        padding-top: 8%;
+        padding-left: 0%;
+    }
+
+    .navbar-nav {
+        /*margin: 7.5px -15px;*/
+        margin: 0px 0px !important;
+    }
+
+    .headerimg {
+        background: url(../Images/bg.png) no-repeat top center !important;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        line-height: 1.428571429;
+        color: #333333;
+        background-color: #ece9cd !important;
+    }
+    .menublue {
+        background: #5c5c5c !important;
+        color: white !important;
+        padding: 15px;
+    }
+}
 .headerimg{
     background: url(../Images/mechine.png) no-repeat top center;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -30,6 +60,10 @@
         background-color: #ece9cd;
 
 }
+    #mnDashboard a
+    {
+        color:white;
+    }
     .menublue{
     background: #4b7490 !important;
     color:white !important;
@@ -544,7 +578,7 @@ h6 small,
 h1,
 h2,
 h3 {
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 
@@ -3556,7 +3590,7 @@ input[type="button"].btn-block {
 .dropdown-menulightblue > li > a:focus {
   color: #ffffff;
   text-decoration: none;
-  background-color: #bba0c0;
+  background-color: rgba(75,116,144,0.4);
 }
 
 .dropdown-menulightblue > .active > a,
@@ -4553,6 +4587,64 @@ textarea.input-group-sm > .input-group-btn > .btn {
   .navbar-nav .open .dropdown-menu > li > a:focus {
     background-image: none;
   }
+/*============================================================== menulightblue*/
+.navbar-nav .open .dropdown-menulightblue {
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    box-shadow: none;
+  }
+  .navbar-nav .open .dropdown-menulightblue > li > a,
+  .navbar-nav .open .dropdown-menulightblue .dropdown-header {
+    padding: 5px 15px 5px 25px;
+  }
+  .navbar-nav .open .dropdown-menulightblue > li > a {
+    line-height: 20px;
+  }
+  .navbar-nav .open .dropdown-menulightblue > li > a:hover,
+  .navbar-nav .open .dropdown-menulightblue > li > a:focus {
+    background-image: none;
+  }
+  .dropdown-menulightblue > li > a:hover,
+  .dropdown-menulightblue > li > a:focus {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: rgba(75,116,144,0.4);
+  }
+/*============================================================== menulightblue*/
+    
+    .menublue {
+        background: #5c5c5c !important;
+        color: white !important;
+        padding: 15px;
+    }
+    .menunevyblue{
+        background: #5c5c5c !important;
+        color:white !important;
+        padding: 15px;
+    }
+    .menupuple{
+        background: #5c5c5c !important;
+        color:white !important;
+        padding: 15px;
+    }
+    .menupink{
+        background: #5c5c5c !important;
+        color:white !important;
+        padding: 15px;
+    }
+    .menugray{
+        background: #5c5c5c !important;
+        color:white !important;
+        padding: 15px;
+    }
+    #mnDashboard a
+    {
+        color:white !important;
+    }
 }
 
 @media (min-width: 768px) {
