--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -55,7 +55,7 @@
         <ul class="form-style-1 hidecolumn">
             <li>
                 <label>เลขที่ใบสั่งงาน</label>
-                <input type="text" id="txtJobNo" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" disabled />
+                <input type="text" id="txtJobNo1" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" disabled />
             </li>
             <li>
                 <label class="label-2" style="margin-right: 43%;">วันที่</label>&nbsp;<label class="label-2">ยานพาหนะ<span class="required">*</span></label>
