--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -82,7 +82,7 @@
                 <li>
 
                     <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
-                    <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-center"/></div>
+                    <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-responsive" /></div>
                     
                 </li>
                 <li>
