--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -68,7 +68,7 @@
             <ul class="form-style-1">
                 <li>
                     <input type="file" name="photo" id="photo" onchange="readURL(this);" style="color:transparent;">
-                    <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-center" /></div>
+                    <div class="imgpreview"><img id="imgPreview" alt="your image" class="img-responsive" /></div>
                     <input type="hidden" id="hidFilePath" />
                     <input type="hidden" id="hidProductFileID" />
                     <input type="hidden" id="hidAttachPath" />
