--- a/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
@@ -47,7 +47,7 @@
     <thead class="bgthead">
         <tr>
             <th class="thgray">No.</th>
-            <th class="thgray Rowpointer">TechnicianID</th>
+            <th class="thgray Rowpointer hidecolumn">TechnicianID</th>
             <th class="thgray hideANDseek Rowpointer">HRID</th>
             <th class="thgray Rowpointer">Name</th>
             <th class="thgray Rowpointer">Position</th>
